--- a/blog_website/blog/templates/blog/home.html
+++ b/blog_website/blog/templates/blog/home.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-</head>
-<body>
+{% extends "blog/base.html" %}
+{% block content %}
     {% for post in posts %}
         <h1>{{ post.title }}</h1>
         <p>By {{ post.author }} on {{ post.date_posted }}</p>
         <p>By {{ post.content }}</p>
     {% endfor %}
-</body>
-</html>
+
+{% endblock content %}
