--- a/blog_website/blog/templates/blog/base.html
+++ b/blog_website/blog/templates/blog/base.html
@@ -35,6 +35,7 @@
             <div class="navbar-nav ml-auto d-flex align-items-center">
                 {% if user.is_authenticated %}
                     <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+                    <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
                     <form method="POST" action="{% url 'logout' %}">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-link nav-item nav-link" style="padding: 0;">Logout</button>
