added readme capabilities

--- a/blog_website/blog/templates/blog/user_post.html
+++ b/blog_website/blog/templates/blog/user_post.html
@@ -1,3 +1,4 @@
+<!-- blog/templates/blog/user_posts.html -->
 {% extends "blog/base.html" %}
 {% block content %}
     <h1 class="mb-3">Posts by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h1>
