--- a/blog_website/blog/templates/blog/post_detail.html
+++ b/blog_website/blog/templates/blog/post_detail.html
@@ -1,7 +1,8 @@
+<!-- blog/templates/blog/post_detail.html -->
 {% extends "blog/base.html" %}
 {% block content %}
         <article class="media content-section">
-           <img class = "rounded-circle article-img" src = "{{ object.author.profile.image.url }}">
+           <img class="rounded-circle article-img" src="{{ object.author.profile.image.url }}">
           <div class="media-body">
             <div class="article-metadata">
               <a class="mr-2" href="{% url 'user-posts' object.author.username %}">{{ object.author }}</a>
@@ -14,7 +15,7 @@
                 {% endif %}
             </div>
             <h2 class="article-title">{{ object.title }}</h2>
-            <p class="article-content">{{ object.content }}</p>
+            <p class="article-content">{{ object.content_html|safe }}</p>
           </div>
         </article>
 {% endblock content %}
