--- a/blog_website/blog/templates/blog/about.html
+++ b/blog_website/blog/templates/blog/about.html
@@ -1,4 +1,5 @@
 {% extends "blog/base.html" %}
 {% block content %}
     <h1>About page</h1>
+	<h2>You got everything covered here, nothing to see</h2>
 {% endblock content %}
