--- a/blog_website/blog/templates/blog/about.html
+++ b/blog_website/blog/templates/blog/about.html
@@ -1,5 +1,7 @@
 {% extends "blog/base.html" %}
 {% block content %}
+<div class="flex-grow-1">
     <h1>About page</h1>
-	<h2>You got everything covered here, nothing to see</h2>
+    <h2>You got everything covered here, nothing to see</h2>
+</div>
 {% endblock content %}
