added meta tags

--- a/blog_website/blog/templates/blog/base.html
+++ b/blog_website/blog/templates/blog/base.html
@@ -5,17 +5,16 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
+    <!-- SEO Meta Tags -->
+    <meta name="robots" content="{% block robots %}index, follow{% endblock %}">
+    <title>{% block title %}Exam Blog{% endblock %}</title>
+    <meta name="description" content="{% block description %}Default description for the blog.{% endblock %}">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="{% static 'blog/main.css' %}">
-
-    {% if title %}
-        <title>Exam - {{ title }}</title>
-    {% else %}
-        <title>Exam Blog</title>
-    {% endif %}
 </head>
 <body>
     <div class="d-flex flex-column min-vh-100">
