--- a/blog_website/blog/templates/blog/post_detail.html
+++ b/blog_website/blog/templates/blog/post_detail.html
@@ -1,23 +1,27 @@
 <!-- blog/templates/blog/post_detail.html -->
 {% extends "blog/base.html" %}
+{% block title %}{{ object.title }}{% endblock %}
+{% block description %}{{ object.short_description }}{% endblock %}
+{% block robots %}index, follow{% endblock %}
+
 {% block content %}
-    <article class="media content-section">
-        <img class="rounded-circle article-img" src="{{ object.author.profile.image.url }}">
-        <div class="media-body">
-            <div class="article-metadata">
-                <a class="mr-2" href="{% url 'user-posts' object.author.username %}">{{ object.author }}</a>
-                <small class="text-muted">{{ object.date_posted | date:"F d, Y" }}</small>
-                {% if object.author == user %}
-                    <div>
-                        <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'post-update' slug=object.slug %}">Update</a>
-                        <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'post-delete' slug=object.slug %}">Delete</a>
-                    </div>
-                {% endif %}
-            </div>
-            <h2 class="article-title">{{ object.title }}</h2>
-            <div class="article-content">
-                {{ object.content_html|safe }}
-            </div>
+<article class="media content-section">
+    <img class="rounded-circle article-img" src="{{ object.author.profile.image.url }}">
+    <div class="media-body">
+        <div class="article-metadata">
+            <a class="mr-2" href="{% url 'user-posts' object.author.username %}">{{ object.author }}</a>
+            <small class="text-muted">{{ object.date_posted | date:"F d, Y" }}</small>
+            {% if object.author == user %}
+                <div>
+                    <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'post-update' slug=object.slug %}">Update</a>
+                    <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'post-delete' slug=object.slug %}">Delete</a>
+                </div>
+            {% endif %}
         </div>
-    </article>
+        <h2 class="article-title">{{ object.title }}</h2>
+        <div class="article-content">
+            {{ object.content_html|safe }}
+        </div>
+    </div>
+</article>
 {% endblock content %}
